--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<meta name="google-site-verification" content="Q0QRvUM4S6Aq9-jirV7iKOn2FNRAkLaPgBeubXJ1S98" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -65,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" title="logo-choutte agence" alt="La chouette agence, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
@@ -124,7 +125,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<h2>"La chouette agence esrt une excellente agence web! les web designers ont réussi à capture l'essence de notres entreprise et à l'intégrer à notres site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
-				<h3>Maxime Guibard, PDG de à vos fourchettes</h3>
+				<p>Maxime Guibard, PDG de à vos fourchettes</p>
 			</div>
 		</div>
 	</div>
