--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>La chouette agence contact</title>
 
     
 <!-- Analytics -->
@@ -31,6 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
+<header>
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
@@ -46,15 +47,14 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">page2</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
 </div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
@@ -111,7 +111,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h <br>du lundi au vendredi<br>
 				</p>
 			</div>
 		</div>
