--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="page2.html">Conctact</a>
 					</li>
 				</ul>
 			</div>
