--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
     <meta name="description" content="La chouette agence-web-design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -209,9 +209,9 @@
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h3 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
+			</h3>
 			<div class="col-sm-12 text-center">
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
@@ -256,8 +256,6 @@
 </div>
 </footer>
 <!-- Footer - END -->
-<!-- Principal conteneur END -->
-    
-
+<!-- Principal conteneur END -->   
 </body>
 </html>
