--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
-    <meta name="description" content="La chouette agence-web-design">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="La chouette agence-web-design, Vous l'avez compris! Pour développer l'activité de votre entreprise dans la région et sur le web, vous devez vous faire appel aux meilleurs designers lyonnais. La chouette agence est là pour vous. Alors n'attendez plus, Contactez-nous!">
+	<meta name="robots" content="all"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -18,7 +19,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>La chouette agence contact</title>
+    <title>La chouette agence-contact</title>
 
     
 <!-- Analytics -->
@@ -54,10 +55,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text ">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg tight-width-whitespace">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
