--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
-    <meta name="description" content="La chouette agence-web-design">
+    <meta name="keywords" content="seo, site web, site internet, agence design lyon, agence design">
+    <meta name="description" content="La chouette agence-web-design, Vous l'avez compris! Pour développer l'activité de votre entreprise dans la région et sur le web, vous devez vous faire appel aux meilleurs designers lyonnais. La chouette agence est là pour vous. Alors n'attendez plus, Contactez-nous!">
+	<meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<meta name="google-site-verification" content="Q0QRvUM4S6Aq9-jirV7iKOn2FNRAkLaPgBeubXJ1S98" />
@@ -20,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La chouette agence</title>
+    <title>La chouette agence web design</title>
 
     
 <!-- Analytics -->
@@ -84,7 +85,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h1>La chouette agence est une entreprise qui aide a devinir attractives et visibles sur internet </h1>
+				<h3>La chouette agence est une entreprise qui aide a devinir attractives et visibles sur internet </h3>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
