--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="seo, site web, site internet, agence design lyon, agence design">
     <meta name="description" content="La chouette agence-web-design, Vous l'avez compris! Pour développer l'activité de votre entreprise dans la région et sur le web, vous devez vous faire appel aux meilleurs designers lyonnais. La chouette agence est là pour vous. Alors n'attendez plus, Contactez-nous!">
-	<meta name="robots" content="index,follow">
+	<meta name="robots" content="all">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<meta name="google-site-verification" content="Q0QRvUM4S6Aq9-jirV7iKOn2FNRAkLaPgBeubXJ1S98" />
@@ -224,6 +224,7 @@
 <!-- Footer - -->
 <footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
