--- a/page2.html
+++ b/page2.html
@@ -80,7 +80,7 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section>
+<aside>
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -122,7 +122,7 @@
 		</div>
 	</div>
 </div>
-</section>
+</aside>
 <!-- bloc-7 END -->
 <!-- Footer - bloc-8 -->
 <footer>
