hover-color-footer

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, site web, site internet, agence design lyon, agence design">
-    <meta name="description" content="La chouette agence-web-design, Vous l'avez compris! Pour développer l'activité de votre entreprise dans la région et sur le web, vous devez vous faire appel aux meilleurs designers lyonnais. La chouette agence est là pour vous. Alors n'attendez plus, Contactez-nous!">
-	<meta name="robots" content="all">
+    <meta name="description" content="La Chouette agence, entreprise de web design à Lyon, aide les entreprises à devenir attractives et visibles sur internet.">
+	<meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<meta name="google-site-verification" content="Q0QRvUM4S6Aq9-jirV7iKOn2FNRAkLaPgBeubXJ1S98" />
@@ -21,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La chouette agence web design</title>
+    <title>La Chouette Agence - Web design</title>
 
     
 <!-- Analytics -->
@@ -69,7 +69,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" title="logo-choutte agence" alt="La chouette logo" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
+					La chouette agence,<br>l'entreprise de web design à Lyon.
 				</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -125,8 +125,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h3>"La chouette agence esrt une excellente agence web! les web designers ont réussi à capture l'essence de notres entreprise et à l'intégrer à notres site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
-				<p>Maxime Guibard, PDG de à vos fourchettes</p>
+				<P class="quote-home">"La chouette agence esrt une excellente agence web! les web designers ont réussi à capture l'essence de notres entreprise et à l'intégrer à notres site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</P>
+				<p class="footer-quote-home">Maxime Guibard, PDG de à vos fourchettes</p>
 			</div>
 		</div>
 	</div>
