--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
-    <meta name="description" content="La chouette agence-web-design, Vous l'avez compris! Pour développer l'activité de votre entreprise dans la région et sur le web, vous devez vous faire appel aux meilleurs designers lyonnais. La chouette agence est là pour vous. Alors n'attendez plus, Contactez-nous!">
-	<meta name="robots" content="all"/>
+    <meta name="description" content="La Chouette agence, entreprise de web design à Lyon, aide les entreprises à devenir attractives et visibles sur internet.">
+	<meta name="robots" content="index,follow"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -20,7 +20,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La chouette agence-contact</title>
+    <title>La Chouette Agence - Contact</title>
 
     
 <!-- Analytics -->
