--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<P class="quote-home">"La chouette agence esrt une excellente agence web! les web designers ont réussi à capture l'essence de notres entreprise et à l'intégrer à notres site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</P>
+				<P class="quote-home">"La chouette agence est une excellente agence web! les web designers ont réussi à capture l'essence de notres entreprise et à l'intégrer à notres site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</P>
 				<p class="footer-quote-home">Maxime Guibard, PDG de à vos fourchettes</p>
 			</div>
 		</div>
@@ -234,22 +234,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
