--- a/page2.html
+++ b/page2.html
@@ -107,7 +107,8 @@
 					<div class="form-group">
 						<label>
 							Brief de votre projet <br> (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="brief de votres projet ici." required></textarea>
+						</label>
+						<textarea id="message" class="form-control" rows="4" cols="50" placeholder="brief de votres projet ici." required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -137,23 +138,23 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur twitter"><label for="social media"><span class="fa fa-twitter icon-md"></span></label></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#" aria-label="rejoignez-nous sur dribble"><span aria-label="dribble" class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
+							<a class="social" href="#" aria-label="rejoignez-nous sur instagram"><span class="fa fa-instagram icon-md"></span></a>	
+				        </div>
 					</div>
 				</div>
 			</div>
